styyle: fix spacing

--- a/src/scss/layout/_card.scss
+++ b/src/scss/layout/_card.scss
@@ -47,7 +47,8 @@
         margin-top: rem(4);
         margin-bottom: rem(8);
         color: $text-muted;
-        font-size: $caption;
+        @extend .caption !optional;
+        @extend .caption-bold !optional;
     }
 
     &-text,
@@ -73,7 +74,11 @@
     &-lg {
         .card {
             &-body {
-                padding: rem(48) $text-spacer-lg;
+                padding: $text-spacer;
+
+                @include breakpoint-min(md) {
+                    padding: rem(48) $text-spacer-lg;
+                }
 
                 @include breakpoint-min(lg) {
                     padding: rem(64) rem(48);
